--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/edit.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/edit.html.erb
@@ -3,6 +3,8 @@
   <div class="button--double form-general-submit">
     <%= f.submit t("update", scope: "decidim.initiatives.edit"), class: "button" if allowed_to? :update, :initiative, initiative: current_initiative %>
 
+    <%= link_to t("print", scope: "decidim.initiatives.admin.initiatives.edit"), print_initiative_path, class: "button action-print" %>
+
     <% if allowed_to? :publish, :initiative, initiative: current_initiative %>
       <%= link_to t("actions.publish", scope: "decidim.admin"),
                   publish_initiative_path(current_initiative),
