--- a/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
@@ -59,8 +59,7 @@
                 <%= icon_link_to "fullscreen-enter",
                                   moderation_reports_path(moderation_id: moderation),
                                   t("actions.expand", scope: "decidim.moderations"),
-                                  class: "action-icon--expand",
-                                  method: :get %>
+                                  class: "action-icon--expand" %>
                 <% if !moderation.reportable.hidden? && allowed_to?(:unreport, :moderation) %>
                   <%= icon_link_to "action-undo",
                                    unreport_moderation_path(id: moderation),
