--- a/decidim-admin/app/views/decidim/admin/moderations/reports/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/reports/index.html.erb
@@ -76,11 +76,11 @@
               <td><%= t("decidim.admin.moderations.report.reasons.#{report.reason}") %></td>
               <td><%= report.locale.present? ? locale_name(report.locale) : '' %></td>
               <td>
+                <%= reported_content_excerpt_for(moderation.reportable) %>
                 <%= icon_link_to "fullscreen-enter",
                                   moderation_report_path(moderation_id: moderation, id: report.id),
                                   t("actions.expand", scope: "decidim.moderations"),
-                                  class: "action-icon--expand",
-                                  method: :get %>
+                                  class: "action-icon--expand" %>
               </td>
               <td><%= report.details %></td>
             </tr>
