--- a/decidim-meetings/app/cells/decidim/meetings/join_meeting_button/show.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/join_meeting_button/show.erb
@@ -12,14 +12,7 @@
       <%= t("going", scope: "decidim.meetings.meetings.show") %>
     <% end %>
   <% else %>
-    <% if model.on_different_platform? %>
-      <%= action_authorized_link_to(
-        :join,
-        i18n_join_text,
-        model.registration_url,
-        class: button_classes
-      ) %>
-    <% elsif model.registration_form_enabled? %>
+    <% if model.registration_form_enabled? %>
       <%= action_authorized_link_to(
         :join,
         i18n_join_text,
@@ -42,4 +35,11 @@
   <% if shows_remaining_slots? %>
     <span><%= t("remaining_slots", scope: "decidim.meetings.meetings.show", count: model.remaining_slots) %></span>
   <% end %>
+<% elsif model.on_different_platform? %>
+  <%= action_authorized_link_to(
+    :join,
+    i18n_join_text,
+    model.registration_url,
+    class: button_classes
+  ) %>
 <% end %>
