--- a/decidim-generators/lib/decidim/generators/app_templates/secrets.yml.erb
+++ b/decidim-generators/lib/decidim/generators/app_templates/secrets.yml.erb
@@ -38,6 +38,7 @@ default: &default
     server: <%%= ENV["BULLETIN_BOARD_SERVER"] %>
     api_key: <%%= ENV["BULLETIN_BOARD_API_KEY"] %>
     number_of_trustees: <%%= ENV["BULLETIN_BOARD_NUMBER_OF_TRUSTEES"] %>
+    authority_id: <%%= ENV["BULLETIN_BOARD_AUTHORITY_NAME"] %>
     scheme:
       name: <%%= ENV["BULLETIN_BOARD_SCHEME_NAME"] %>
       parameters:
