--- a/decidim-core/app/cells/decidim/profile/inaccessible.erb
+++ b/decidim-core/app/cells/decidim/profile/inaccessible.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h1 class="heading1 page-title">
       <div class="text-center">
-        <p>This profile is inaccessible due to Terms and Conditions violation!</p>
+        <p><%= t(".inaccessible_message") %></p>
       </div>
     </h1>
   </div>
