--- a/decidim-admin/app/views/decidim/admin/moderations/reports/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/reports/index.html.erb
@@ -65,8 +65,8 @@
           <tr>
             <th><%= t("models.report.fields.reason", scope: "decidim.moderations") %></th>
             <th><%= t("models.report.fields.locale", scope: "decidim.moderations") %></th>
-            <th><%= t(".reported_content") %></th>
             <th><%= t("models.report.fields.details", scope: "decidim.moderations") %></th>
+            <th class="actions"><%= t("actions.title", scope: "decidim.moderations") %></th>
           </tr>
         </thead>
         <tbody>
@@ -74,14 +74,13 @@
             <tr data-id="<%= report.id %>">
               <td><%= t("decidim.admin.moderations.report.reasons.#{report.reason}") %></td>
               <td><%= report.locale.present? ? locale_name(report.locale) : "" %></td>
-              <td>
-                <%= reported_content_excerpt_for(moderation.reportable) %>
+              <td><%= report.details %></td>
+              <td class="actions">
                 <%= icon_link_to "fullscreen-enter",
                                   moderation_report_path(moderation_id: moderation, id: report.id),
                                   t("actions.expand", scope: "decidim.moderations"),
                                   class: "action-icon--expand" %>
               </td>
-              <td><%= report.details %></td>
             </tr>
           <% end %>
         </tbody>
