--- a/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_moderations.scss
+++ b/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_moderations.scss
@@ -1,21 +1,37 @@
-.moderation-details {
-  .toggle-content {
+.moderation-details{
+  .toggle-content{
     cursor: pointer;
-    margin-left: 0.5rem;
-    font-size: 0.9rem;
+    margin-left: .5rem;
+    font-size: .9rem;
   }
-  .callout {
-    &-text {
-      margin-left: 0.5rem;
-      .icon {
-        width: 0.6rem;
-        margin: 0 0.2rem;
+
+  .reported-content{
+    .original{
+      display: none
+    }
+  }
+
+  .callout{
+    &-text{
+      margin-left: .5rem;
+      .icon{
+        width: .6rem;
+        margin: 0 .2rem;
       }
     }
   }
-  dd {
+
+  dd{
     padding: $global-padding;
     background-color: $light-gray;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
+  }
+
+  .reportable-authors{
+    list-style: none;
+    margin: 0;
+    .icon{
+      margin-left: .5rem;
+    }
   }
 }
