--- a/decidim-participatory_processes/app/cells/decidim/participatory_process_groups/content_blocks/title/show.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_process_groups/content_blocks/title/show.erb
@@ -6,12 +6,12 @@
       <div class="row">
         <div class="column medium-2 text-muted">
           <%= icon "grid-three-up", role: "img", class: "mr-xs" %>
-          <%= t(".participatory_processes", count: participatory_processes_count) %>
+          <%= t("decidim.participatory_process_groups.content_blocks.title.participatory_processes", count: participatory_processes_count) %>
         </div>
         <% if has_meta_scope? %>
           <div class="column medium-3 end text-muted">
             <%= icon "globe", class: "mr-xs" %>
-            <strong><%= t(".meta_scope") %></strong>
+            <strong><%= t("decidim.participatory_process_groups.content_blocks.title.meta_scope") %></strong>
             <%= translated_attribute(meta_scope) %>
           </div>
         <% end %>
